remove bullets, fix spacing, and change font

--- a/css/publish.css
+++ b/css/publish.css
@@ -1,7 +1,8 @@
 /* Shared */
 @media screen, print {
     html {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"
+        /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" */
+        font-family: 'Atkinson Hyperlegible', sans-serif;
     }
         
     * {
@@ -58,7 +59,6 @@
 
     .job-heading.title {
         font-weight: 600;
-        margin-bottom: 5px;
     }
     
     .job ul {
@@ -159,8 +159,9 @@
     
     /* Date */
     .date {
-        font-size: .9em;
+        font-size: 14px;
         font-weight: 500;
+        margin-bottom: 4px;
         color: gray;
         text-transform: uppercase;
     }
